Bleep. Bloop. I am a bot.

--- a/Contributing.html
+++ b/Contributing.html
@@ -416,6 +416,23 @@ make sure the commands they run behave like pure functions.</p>
 also hidden by default. Envvars should be avoided whenever possible,
 all functionality should be exposed in better ways such as command
 line switches.</p>
+<h2 id="random-design-points-that-fit-nowhere-else">Random design points that fit nowhere else</h2>
+<ul>
+<li>
+<p>All features should follow the 90/9/1 rule. 90% of all use cases
+should be easy, 9% should be possible and it is totally fine to not
+support the final 1% if it would make things too complicated.</p>
+</li>
+<li>
+<p>Any build directory will have at most two toolchains: one native and
+one cross.</p>
+</li>
+<li>
+<p>Prefer specific solutions to generic frameworks. Solve the end
+user's problems rather than providing them tools to do it
+themselves.</p>
+</li>
+</ul>
 
     </div>
         
