--- a/Syntax.html
+++ b/Syntax.html
@@ -219,6 +219,10 @@ int_1365 = 0b10101010101
 <pre><code class="language-meson">string_var = '42'
 num = string_var.to_int()
 </code></pre>
+<p>Numbers can be converted to a string:</p>
+<pre><code class="language-meson">int_var = 42
+string_var = int_var.to_string()
+</code></pre>
 <h2 id="booleans">Booleans</h2>
 <p>A boolean is either <code>true</code> or <code>false</code>.</p>
 <pre><code class="language-meson">truth = true
