--- a/Release-notes-for-0-51-0.html
+++ b/Release-notes-for-0-51-0.html
@@ -243,7 +243,7 @@ such variables from cmake dependencies.</p>
 dependency you have.</p>
 <pre><code class="language-meson">dep = dependency('could_be_cmake_or_pkgconfig')
 # cmake returns 'YES', pkg-config returns 'ON'
-if ['YES', 'ON'].contains(dep.get_variable(pkg-config : 'var-name', cmake : 'COP_VAR_NAME', default_value : 'NO'))
+if ['YES', 'ON'].contains(dep.get_variable(pkgconfig : 'var-name', cmake : 'COP_VAR_NAME', default_value : 'NO'))
   error('Cannot build your project when dep is built with var-name support')
 endif
 </code></pre>
