Bleep. Bloop. I am a bot.

--- a/Cross-compilation.html
+++ b/Cross-compilation.html
@@ -286,7 +286,7 @@ cross compilation you can set them with <code>[langname]_args = [args]</code>. J
 single string (i.e. not as <code>'-DCROSS=1 -DSOMETHING=3'</code>).</p>
 <p><em>Since 0.52.0</em> The <code>sys_root</code> property may point to the root of the host
 system path (the system that will run the compiled binaries). This is used
-internally by meson to set the PKG_CONFIG_SYSROOT_DIR environment variable
+internally by Meson to set the PKG_CONFIG_SYSROOT_DIR environment variable
 for pkg-config. If this is unset the host system is assumed to share a root
 with the build system.</p>
 <p>One important thing to note, if you did not define an <code>exe_wrapper</code> in
