--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1143,6 +1143,10 @@ Since 0.45.0</li>
 <pre><code class="language-text">share/
   file1
 </code></pre>
+<h3 id="is_disabler">is_disabler()</h3>
+<pre><code class="language-meson">    bool is_disabler(var)
+</code></pre>
+<p>Returns true if a variable is a disabler and false otherwise. Added in 0.52.0.</p>
 <h3 id="is_variable">is_variable()</h3>
 <pre><code class="language-meson">    bool is_variable(varname)
 </code></pre>
