--- a/Users.html
+++ b/Users.html
@@ -253,6 +253,8 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://github.com/bil-elmoussaoui/Hardcode-Tray">Hardcode-Tray</a>, fixes hardcoded tray icons in Linux</li>
 <li>
+<a href="http://helenos.org">HelenOS</a>, a portable microkernel-based multiserver operating system</li>
+<li>
 <a href="https://github.com/hexchat/hexchat">HexChat</a>, a cross-platform IRC client in C</li>
 <li>
 <a href="https://cgit.freedesktop.org/xorg/app/intel-gpu-tools/">IGT</a>, Linux kernel graphics driver test suite</li>
