--- a/Release-notes-for-0-52-0.html
+++ b/Release-notes-for-0-52-0.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<title>Release notes</title>
+<title>Release 0.52.0</title>
 
 <link rel="stylesheet" href="assets/css/custom_bootstrap.css" type="text/css">
 <link rel="stylesheet" href="assets/css/bootstrap-toc.min.css" type="text/css">
@@ -158,7 +158,7 @@ $('body').removeClass('no-script');
 </nav>
 
 <main>
-<div data-extension="core" data-hotdoc-in-toplevel="True" data-hotdoc-project="Meson-documentation-1.0" data-hotdoc-ref="Release-notes.html" class="page_container" id="page-wrapper">
+<div data-extension="core" data-hotdoc-in-toplevel="True" data-hotdoc-project="Meson-documentation-1.0" data-hotdoc-ref="Release-notes-for-0-52-0.html" class="page_container" id="page-wrapper">
 <script src="assets/js/utils.js"></script>
 
 <div class="panel panel-collapse oc-collapsed" id="sidenav" data-hotdoc-role="navigation">
@@ -169,7 +169,10 @@ $('body').removeClass('no-script');
 <div id="body">
 	<div id="main">
 				    <div id="page-description" data-hotdoc-role="main">
-        <h1 id="release-notes">Release notes</h1>
+        <h1 id="new-features">New features</h1>
+<h2 id="allow-checking-if-a-variable-is-a-disabler">Allow checking if a variable is a disabler</h2>
+<p>Added the function <code>is_disabler(var)</code>. Returns true if a variable is a disabler
+and false otherwise.</p>
 
     </div>
         
@@ -177,75 +180,7 @@ $('body').removeClass('no-script');
 
 
 
-		<div id="subpages">
-	<p><b>Subpages:</b></p>
-	<div class="thumb-subpages">
-																																																																																																																			</div>
-							<p>
-			<a href="Release-notes-for-0-52-0.html">Release 0.52.0</a>
-							– Release notes for 0.52.0
-						</p>
-									<p>
-			<a href="Release-notes-for-0-51-0.html">Release 0.51.0</a>
-							– Release notes for 0.51.0
-						</p>
-									<p>
-			<a href="Release-notes-for-0-50-0.html">Release 0.50.0</a>
-							– Release notes for 0.50.0
-						</p>
-									<p>
-			<a href="Release-notes-for-0-49-0.html">Release 0.49</a>
-							– Release notes for 0.49
-						</p>
-									<p>
-			<a href="Release-notes-for-0-48-0.html">Release 0.48</a>
-							– Release notes for 0.48
-						</p>
-									<p>
-			<a href="Release-notes-for-0-47-0.html">Release 0.47</a>
-							– Release notes for 0.47
-						</p>
-									<p>
-			<a href="Release-notes-for-0-46-0.html">Release 0.46</a>
-							– Release notes for 0.46
-						</p>
-									<p>
-			<a href="Release-notes-for-0-45-0.html">Release 0.45</a>
-							– Release notes for 0.45
-						</p>
-									<p>
-			<a href="Release-notes-for-0-44-0.html">Release 0.44</a>
-							– Release notes for 0.44
-						</p>
-									<p>
-			<a href="Release-notes-for-0-43-0.html">Release 0.43</a>
-							– Release notes for 0.43
-						</p>
-									<p>
-			<a href="Release-notes-for-0-42-0.html">Release 0.42</a>
-							– Release notes for 0.42
-						</p>
-									<p>
-			<a href="Release-notes-for-0-41-0.html">Release 0.41</a>
-							– Release notes for 0.41
-						</p>
-									<p>
-			<a href="Release-notes-for-0-40-0.html">Release 0.40</a>
-							– Release notes for 0.40
-						</p>
-									<p>
-			<a href="Release-notes-for-0-39-0.html">Release 0.39</a>
-							– Release notes for 0.39
-						</p>
-									<p>
-			<a href="Release-notes-for-0-38-0.html">Release 0.38</a>
-							– Release notes for 0.38
-						</p>
-									<p>
-			<a href="Release-notes-for-0-37-0.html">Release 0.37</a>
-							– Release notes for 0.37
-						</p>
-			</div>
+		
 	</div>
 	<div id="search_results">
 		<p>The results of the search are</p>
@@ -266,7 +201,7 @@ $('body').removeClass('no-script');
 <div id="toc-column">
 	
 		<div class="edit-button">
-		<a href="https://github.com/mesonbuild/meson//edit/master/docs/markdown/Release-notes.md" data-hotdoc-role="edit-button">Edit on github</a>
+		<a href="https://github.com/mesonbuild/meson//edit/master/docs/markdown/Release-notes-for-0.52.0.md" data-hotdoc-role="edit-button">Edit on github</a>
 
 	</div>
 		<div id="toc-wrapper">
