Bleep. Bloop. I am a bot.

--- a/Users.html
+++ b/Users.html
@@ -344,6 +344,8 @@ format files</li>
 <li>
 <a href="https://github.com/radare/radare2">radare2</a>, unix-like reverse engineering framework and commandline tools (not the default)</li>
 <li>
+<a href="https://gitlab.com/rxdock/rxdock">RxDock</a>, a protein-ligand docking software designed for high throughput virtual screening (fork of rDock)</li>
+<li>
 <a href="https://github.com/libfuse/sshfs">SSHFS</a>, allows you to mount a remote filesystem using SFTP</li>
 <li>
 <a href="https://github.com/swaywm/sway">sway</a>, i3-compatible Wayland compositor</li>
