Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -504,7 +504,7 @@ platforms or with all compilers:</p>
 <p><code>b_bitcode</code> will pass <code>-fembed-bitcode</code> while compiling and will pass
 <code>-Wl,-bitcode_bundle</code> while linking. These options are incompatible with
 <code>b_asneeded</code>, so that option will be silently disabled.</p>
-<p><a href="Builtin-options.html#Reference-manual.md#shared_module">Shared modules</a> will not have bitcode
+<p><a href="Reference-manual.html#shared_module">Shared modules</a> will not have bitcode
 embedded because <code>-Wl,-bitcode_bundle</code> is incompatible with both <code>-bundle</code> and
 <code>-Wl,-undefined,dynamic_lookup</code> which are necessary for shared modules to work.</p>
 <h2 id="compiler-options">Compiler options</h2>
