--- a/D.html
+++ b/D.html
@@ -257,8 +257,8 @@ compilers will lead to problems.</p>
 <p>DUB is a fully integrated build system for D, but it is also a way to
 provide dependencies. Adding dependencies from the <a href="https://code.dlang.org/">D package registry</a>
 is pretty straight forward. You can find how to do this in
-<a href="Dependencies.html#Dub">Dependencies</a>. You can also automatically
-generate a <code>dub.json</code> file as explained in <a href="Dlang-module.html#generatedubfile">Dlang</a>.</p>
+<a href="Dependencies.html#some-notes-on-dub">Dependencies</a>. You can also automatically
+generate a <code>dub.json</code> file as explained in <a href="Dlang-module.html#generate_dub_file">Dlang</a>.</p>
 
     </div>
         
