--- a/Gnome-module.html
+++ b/Gnome-module.html
@@ -424,8 +424,9 @@ useful when running the application locally for example during tests.</p>
 built by default, that is, when invoking plain <code>ninja</code>, the default
 value is true for all built target types</li>
 <li>
-<code>depend_files</code>: files (<a href="Gnome-module.html#string-object"><code>string</code></a>,
-<a href="Gnome-module.html#files"><code>files()</code></a>, or <a href="Gnome-module.html#configure_file"><code>configure_file()</code></a>) of
+<code>depend_files</code>: files (<a href="Reference-manual.html#string-object"><code>string</code></a>,
+<a href="Reference-manual.html#files"><code>files()</code></a>, or
+<a href="Reference-manual.html#configure_file"><code>configure_file()</code></a>) of
 schema source XML files that should trigger a re-compile if changed.</li>
 </ul>
 <h3 id="gnomegdbus_codegen">gnome.gdbus_codegen()</h3>
