--- a/Python-3-module.html
+++ b/Python-3-module.html
@@ -187,7 +187,7 @@ arguments are the same as for
 <a href="Reference-manual.html#shared_module">shared_module</a>.</p>
 <p><code>extension_module</code> does not add any dependencies to the library so user may
 need to add <code>dependencies : dependency('python3')</code>, see
-<a href="Dependencies.html#Python3">Python3 dependency</a>.</p>
+<a href="Dependencies.html#python3">Python3 dependency</a>.</p>
 <p><em>Added 0.38.0</em></p>
 <p>Deprecated, replaced by <a href="Python-module.html#extension_module"><code>extension_module</code></a>
 method from <code>python</code> module.</p>
