--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -348,6 +348,10 @@ set in the cross file.</p>
 <td> 64 bit ARM processor</td>
 </tr>
 <tr>
+<td> alpha</td>
+<td> DEC Alpha processor</td>
+</tr>
+<tr>
 <td> arc</td>
 <td> 32 bit ARC processor</td>
 </tr>
