--- a/Release-notes-for-0-46-0.html
+++ b/Release-notes-for-0-46-0.html
@@ -393,7 +393,7 @@ default value will be provided for all required fields of the pc file:</p>
 <code>name</code> is set to the library's name.</li>
 </ul>
 <p>Generating a .pc file is now as simple as:</p>
-<pre><code>pkgconfig.generate(mylib)
+<pre><code class="language-meson">pkgconfig.generate(mylib)
 </code></pre>
 <h2 id="pkgconfiggenerate-requires-parameters-nonstring-arguments">pkgconfig.generate() requires parameters non-string arguments</h2>
 <p><code>pkgconfig.generate()</code> <code>requires:</code> and <code>requires_private:</code> keyword arguments
