--- a/Release-notes-for-0-48-0.html
+++ b/Release-notes-for-0-48-0.html
@@ -187,7 +187,7 @@ Visual Studio C runtime to use. By default it uses the debug runtime
 DLL debug builds and release DLL for release builds but this can be
 manually changed with the new base option <code>b_vscrt</code>.</p>
 <h2 id="meson-warns-if-two-calls-to-configure_file-write-to-the-same-file">Meson warns if two calls to <code>configure_file()</code> write to the same file</h2>
-<p>If two calls to <a href="Release-notes-for-0-48-0.html#Reference-manual.md#configure_file"><code>configure_file()</code></a>
+<p>If two calls to <a href="Reference-manual.html#configure_file"><code>configure_file()</code></a>
 write to the same file Meson will print a <code>WARNING:</code> message during
 configuration. For example:</p>
 <pre><code class="language-meson">project('configure_file', 'cpp')
