--- a/Subprojects.html
+++ b/Subprojects.html
@@ -184,7 +184,7 @@ becomes a transparent part of the project.</p>
 that are built with Meson. The reason is the simple fact that there is
 no possible way to do this reliably with mixed build systems. Because of
 this, only meson subprojects are described here.
-<a href="CMake-module.html#CMake-subprojects">CMake based subprojects</a> are also
+<a href="CMake-module.html#cmake-subprojects">CMake based subprojects</a> are also
 supported but not guaranteed to work.</p>
 <h2 id="a-subproject-example">A subproject example</h2>
 <p>Usually dependencies consist of some header files plus a library to link against.
