--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1207,7 +1207,10 @@ You should use this instead of <a href="Reference-manual.html#shared_library"><c
 <a href="Reference-manual.html#static_library"><code>static_library</code></a> or
 <a href="Reference-manual.html#both_libraries"><code>both_libraries</code></a> most of the time. This allows you
 to toggle your entire project (including subprojects) from shared to
-static with only one option.</p>
+static with only one option. This option applies to libraries being
+built internal to the entire project. For external dependencies, the
+default library type prefered is shared. This can be adapted on a per
+library basis using the <a href="Reference-manual.html#dependency">dependency()</a>) <code>static</code> keyword.</p>
 <p>The keyword arguments for this are the same as for
 <a href="Reference-manual.html#executable"><code>executable</code></a> with the following additions:</p>
 <ul>
