Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -577,6 +577,12 @@ compiler being used:</p>
 <td> C++ exception handling type</td>
 </tr>
 <tr>
+<td> cpp_rtti</td>
+<td> true</td>
+<td> true, false</td>
+<td> Whether to enable RTTI (runtime type identification)</td>
+</tr>
+<tr>
 <td> cpp_winlibs</td>
 <td> see below</td>
 <td> free-form comma-separated list</td>
