Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -273,7 +273,7 @@ accurate, especially on Linux where different distributions have different
 defaults. Using a <a href="Cross-compilation.html#defining-the-environment">cross file</a>,
 particularly the paths section may be necessary.</p>
 <h3 id="core-options">Core options</h3>
-<p>Options that are labled "per machine" in the table are set per machine.
+<p>Options that are labeled "per machine" in the table are set per machine.
 Prefixing the option with <code>build.</code> just affects the build machine configuration,
 while unprefixed just affects the host machine configuration, respectively.
 Using the option as-is with no prefix affects all machines. For example:</p>
@@ -304,7 +304,7 @@ Using the option as-is with no prefix affects all machines. For example:</p>
 <td> no</td>
 </tr>
 <tr>
-<td> backend {ninja, vs,<br>vs2010, vs2015, vs2017, xcode}</td>
+<td> backend {ninja, vs,<br>vs2010, vs2015, vs2017, vs2019, xcode}</td>
 <td> ninja</td>
 <td> Backend to use</td>
 <td> no</td>
