--- a/CMake-module.html
+++ b/CMake-module.html
@@ -237,7 +237,7 @@ and supports the following methods:</p>
 <code>dependency(target)</code> returns a dependency object for any CMake target.</li>
 <li>
 <code>include_directories(target)</code> returns a meson <code>include_directories()</code>
-object for the specified target. Using this function is not neccessary
+object for the specified target. Using this function is not necessary
 if the dependency object is used.</li>
 <li>
 <code>target(target)</code> returns the raw build target.</li>
@@ -248,7 +248,7 @@ if the dependency object is used.</li>
 <li>
 <code>get_variable(name)</code> fetches the specified variable from inside
 the subproject. Usually <code>dependency()</code> or <code>target()</code> should be
-prefered to extract build targets.</li>
+preferred to extract build targets.</li>
 </ul>
 <h2 id="cmake-configuration-files">CMake configuration files</h2>
 <h3 id="cmakewrite_basic_package_version_file">cmake.write_basic_package_version_file()</h3>
