--- a/Contributing.html
+++ b/Contributing.html
@@ -196,7 +196,7 @@ possible or if the test requires a special environment, it must go
 into <code>run_unittests.py</code>.</li>
 <li>Must be registered with the <a href="Release-notes-for-0-47-0.html#feature-detection-based-on-meson_version-in-project">FeatureChecks framework</a>
 that will warn the user if they try to use a new feature while
-targetting an older meson version.</li>
+targeting an older meson version.</li>
 <li>Needs a release note snippet inside <code>docs/markdown/snippets/</code> with
 a heading and a brief paragraph explaining what the feature does
 with an example.</li>
@@ -242,7 +242,7 @@ require the approval of the project lead.</p>
 </li>
 </ul>
 <h2 id="strategy-for-merging-pull-requests-to-trunk">Strategy for merging pull requests to trunk</h2>
-<p>Meson's merge strategy should fullfill the following guidelines:</p>
+<p>Meson's merge strategy should fulfill the following guidelines:</p>
 <ul>
 <li>
 <p>preserve as much history as possible</p>
