--- a/Kconfig-module.html
+++ b/Kconfig-module.html
@@ -175,7 +175,7 @@ configurations in meson projects.</p>
 <p><strong>Note</strong>: this does not provide kconfig frontend tooling to generate a
 configuration. You still need something such as kconfig frontends (see
 link below) to parse your Kconfig files, and then (after you've
-choosen the configuration options), output a ".config" file.</p>
+chosen the configuration options), output a ".config" file.</p>
 <h2 id="usage">Usage</h2>
 <p>The module may be imported as follows:</p>
 <pre><code class="language-meson">kconfig = import('unstable-kconfig')
