--- a/Localisation.html
+++ b/Localisation.html
@@ -172,7 +172,7 @@ $('body').removeClass('no-script');
         <h1 id="localisation">Localisation</h1>
 <p>Localising your application with GNU gettext takes a little effort but is quite straightforward. We'll create a <code>po</code> subdirectory at your project root directory for all the localisation info.</p>
 <h2 id="generating-pot-and-po-files">Generating .pot and .po files</h2>
-<p>In your main meson.build file include the <code>po</code> subdirectory in the build proces.</p>
+<p>In your main meson.build file include the <code>po</code> subdirectory in the build process.</p>
 <pre><code>subdir('po')
 </code></pre>
 <p>In this <code>po</code> subdirectory we need:</p>
