--- a/Pkg-config-files.html
+++ b/Pkg-config-files.html
@@ -183,7 +183,7 @@ pkg.generate(libraries : libs,
              description : 'A simple demo library.')
 </code></pre>
 <p>This causes a file called <code>simple.pc</code> to be created and placed into the install directory during the install phase.</p>
-<p>More infromation on the pkg-config module and the parameters can be found on the <a href="Pkgconfig-module.html">pkgconfig-module</a> page.</p>
+<p>More information on the pkg-config module and the parameters can be found on the <a href="Pkgconfig-module.html">pkgconfig-module</a> page.</p>
 
     </div>
         
