--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -857,7 +857,7 @@ file is ignored and the program is only searched from the system.</p>
 <a href="Reference-manual.html#dependency"><code>dependency()</code></a> for argument format. The version of the program
 is determined by running <code>program_name --version</code> command. If stdout is empty
 it fallbacks to stderr. If the output contains more text than simply a version
-number, only the first occurence of numbers separated by dots is kept.
+number, only the first occurrence of numbers separated by dots is kept.
 If the output is more complicated than that, the version checking will have to
 be done manually using <a href="Reference-manual.html#run_command"><code>run_command()</code></a>.</p>
 </li>
@@ -1209,7 +1209,7 @@ You should use this instead of <a href="Reference-manual.html#shared_library"><c
 to toggle your entire project (including subprojects) from shared to
 static with only one option. This option applies to libraries being
 built internal to the entire project. For external dependencies, the
-default library type prefered is shared. This can be adapted on a per
+default library type preferred is shared. This can be adapted on a per
 library basis using the <a href="Reference-manual.html#dependency">dependency()</a>) <code>static</code> keyword.</p>
 <p>The keyword arguments for this are the same as for
 <a href="Reference-manual.html#executable"><code>executable</code></a> with the following additions:</p>
