--- a/Rewriter.html
+++ b/Rewriter.html
@@ -249,7 +249,7 @@ general command for setting or removing kwargs is:</p>
 <pre><code class="language-bash">meson rewrite default-options {set/delete} &lt;opt1&gt; &lt;value1&gt; &lt;opt2&gt; &lt;value2&gt; ...
 </code></pre>
 <h2 id="limitations">Limitations</h2>
-<p>Rewriting a meson file is not guranteed to keep the indentation of the modified
+<p>Rewriting a meson file is not guaranteed to keep the indentation of the modified
 functions. Additionally, comments inside a modified statement will be removed.
 Furthermore, all source files will be sorted alphabetically.</p>
 <p>For instance adding <code>e.c</code> to srcs in the following code</p>
