--- a/Unit-tests.html
+++ b/Unit-tests.html
@@ -256,7 +256,7 @@ it would be more useful to specify either specific test names or suite(s).</p>
 </code></pre>
 <pre><code class="language-console">$ meson test --print-errorlogs
 </code></pre>
-<p>Meson will report the output produced by the failing tests along with other useful informations as the environmental variables. This is useful, for example, when you run the tests on Travis-CI, Jenkins and the like.</p>
+<p>Meson will report the output produced by the failing tests along with other useful information as the environmental variables. This is useful, for example, when you run the tests on Travis-CI, Jenkins and the like.</p>
 <p>For further information see the command line help of Meson by running <code>meson test -h</code>.</p>
 <h2 id="legacy-notes">Legacy notes</h2>
 <p>If <code>meson test</code> does not work for you, you likely have a old version of Meson.
