--- a/Build-options.html
+++ b/Build-options.html
@@ -239,7 +239,7 @@ if d.found()
   app = executable('myapp', 'main.c', dependencies : [d])
 endif
 </code></pre>
-<p>If the value of a <code>feature</code> option is set to <code>auto</code>, that value is overriden by
+<p>If the value of a <code>feature</code> option is set to <code>auto</code>, that value is overridden by
 the global <code>auto_features</code> option (which defaults to <code>auto</code>). This is intended
 to be used by packagers who want to have full control on which dependencies are
 required and which are disabled, and not rely on build-deps being installed
