--- a/FAQ.html
+++ b/FAQ.html
@@ -413,7 +413,7 @@ provided by their operating system. In practice what this means is
 that Windows developers should be able to contribute using nothing but
 Visual Studio.</p>
 <p>At the time of writing (April 2018) there are only three languages
-that could fullfill these requirements:</p>
+that could fulfill these requirements:</p>
 <ul>
 <li>C</li>
 <li>C++</li>
