--- a/Vala.html
+++ b/Vala.html
@@ -235,7 +235,7 @@ Vala.</p>
 Such libraries will have their VAPI file installed along with their other
 development files. The VAPI is installed in Vala's standard search path and so
 works just as seamlessly using the <code>dependency()</code> function.</p>
-<h3 id="targetting-a-version-of-glib">Targetting a version of GLib</h3>
+<h3 id="targeting-a-version-of-glib">Targeting a version of GLib</h3>
 <p>Meson's <a href="Reference-manual.html#dependency"><code>dependency()</code></a> function allows a
 version check of a library. This is often used to check a minimum version is
 installed. When setting a minimum version of GLib, Meson will also pass this to
